--- a/src/components/video_item/video_item.module.css
+++ b/src/components/video_item/video_item.module.css
@@ -3,7 +3,17 @@
 	padding: 0.2em;
 }
 
+.container.list {
+	width: 100%;
+}
+
+.container.grid {
+	width: 50%;
+}
+
 .video {
+	width: 100%;
+	height: 100%;
 	display: flex;
 	align-items: center;
 	border: 1px solid lightgray;
@@ -18,6 +28,7 @@
 
 .thumbnail {
 	width: 40%;
+	height: 100%;
 }
 
 .metadata {
